# SocketWrapper

./: .gitmodules  CMakeLists.txt  README.md
certs/: cert.crt  domain.key
docs/html/: _i_socket_8hpp_source.html  annotated.html  classes.html  classsocketlib_1_1_client_tcp-members.html  classsocketlib_1_1_client_tcp.html  classsocketlib_1_1_client_udp-members.html  classsocketlib_1_1_client_udp.html  classsocketlib_1_1_i_socket-members.html  classsocketlib_1_1_i_socket.html  classsocketlib_1_1_s_s_l_wrapper-members.html  classsocketlib_1_1_s_s_l_wrapper.html  classsocketlib_1_1_server_tcp-members.html  classsocketlib_1_1_server_tcp.html  classsocketlib_1_1_server_udp-members.html  classsocketlib_1_1_server_udp.html  classsocketlib_1_1_socket_ptr-members.html  classsocketlib_1_1_socket_ptr.html  classsocketlib_1_1socket__error-members.html  classsocketlib_1_1socket__error.html  classsocketlib_1_1ssl__error-members.html  classsocketlib_1_1ssl__error.html  client_tcp_8hpp_source.html  client_udp_8hpp_source.html  defines_8hpp_source.html  dir_110a01dac5aeff794f2aeddd365ac75f.html  files.html  hierarchy.html  index.html  (+15 more)
example/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt
src/core/client/platform/: IClient.hpp  clientTcp.hpp
src/core/client/platform/windows/: clientUdp.cpp
src/core/client/platform/windows/include/: clientTcp.hpp  clientUdp.hpp
src/core/defines/: defines.hpp
src/core/server/platform/: IServer.hpp  serverTcp.hpp  serverUdp.hpp
src/core/server/platform/windows/: IServer.cpp  serverTcp.cpp  serverTcp.hpp  serverUdp.hpp  sslSock.cpp
src/core/server/platform/windows/include/: serverTcp.hpp
src/core/socket/: ISocket.hpp  clientTcp.hpp  clientUdp.hpp  serverTcp.hpp  serverUdp.hpp  sslClient.hpp  sslServer.hpp  sslSock.hpp
src/core/socket/linux/: ISocket.cpp
src/core/socket/linux/server/: serverTcp.cpp
src/core/socket/src/: ISocket.cpp  clientTcp.cpp  clientUdp.cpp  serverTcp.cpp  serverUdp.cpp  sslClient.cpp  sslServer.cpp
src/core/socket/src/linux/: ISocket.cpp  clientTcp.cpp  clientUdp.cpp  serverTcp.cpp  serverUdp.cpp
src/core/socket/src/linux/client/: clientTcp.cpp  clientUdp.cpp
src/core/socket/src/linux/server/: serverTcp.cpp  serverUdp.cpp
src/core/socket/src/windows/: ISocket.cpp  clientTcp.cpp  clientUdp.cpp  serverTcp.cpp  serverUdp.cpp
src/core/socket/src/windows/client/: clientTcp.cpp  clientUdp.cpp
src/core/socket/src/windows/server/: serverTcp.cpp  serverUdp.cpp
src/core/socket/windows/: ISocket.cpp
src/core/socket/windows/client/: clientTcp.cpp  sslClient.cpp
src/core/socket/windows/server/: serverTcp.cpp  sslServer.cpp
src/core/utils/: SSLPtr.hpp  SocketPtr.hpp  args_parser.hpp  defines.hpp  exceptions.hpp  socket_exception.hpp  socket_ptr.hpp  sslWrapper.hpp
src/core/utils/src/: SSLPtr.cpp  sslWrapper.cpp
(+31 files in other folders)
